fix stretching images in smaller viewports

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,11 +173,9 @@ p {
         margin: 0 50px;
     }
 
-    .content * {
-        width: 100%;
-    }
-
     .game-container {
+        width: 100%;
+        max-width: 740px;
         flex-direction: column;
         align-items: center;
         text-align: center;
@@ -186,7 +184,6 @@ p {
 
     .game-container img {
         order: 2;
-        width: 100%;
         margin-bottom: 30px;
     }
 
